--- a/.gitignore/.gitignore
+++ b/.gitignore/.gitignore
@@ -2,6 +2,9 @@
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
+ObjectDetection/lib/
+ObjectDetection/data/
+ObjectDetection/old/
 ## User settings
 xcuserdata/
 
